local/job.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job
spec:
  replicas: 1
  selector:
    matchLabels:
      name: job
  template:
    metadata:
      labels:
        name: job
    spec:
      containers:
        - args: ["run", "tscw"]
          command: ["npm"]
          image: node:18
          livenessProbe:
            httpGet:
              path: /live
              port: 8000
          name: job
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
          resources:
          volumeMounts:
            - name: job
              mountPath: /usr/src/job
          workingDir: /usr/src/job
      restartPolicy: Always
      volumes:
        - name: job
          hostPath:
            path: /usr/src/job
